# OpenImageViewer

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakelists.txt  Changelog.txt  LICENSE.md  README.md  common.cmake  mingw-w64-x86_64.cmake  oiv.props  oiv.sln  publish.cmd  publish.props  publish.ps1  release.props
Clients/OIViewer/: AdaptiveMotion.h  AutoScroll.cpp  AutoScroll.h  CMakeLists.txt  CMakelists.txt  CommandManager.h  CommandRegistry.h  ConfigurationLoader.cpp  ConfigurationLoader.h  ContextMenu.h  EventManager.h  ExceptionHandler.cpp  ExceptionHandler.h  FileSorter.h  FileWatcher.h  ImageState.cpp  ImageState.h  InterThreadMessages.h  LabelManager.cpp  LabelManager.h  MouseMultiClickHandler.h  OIVCommands.h  OIViewerManifest.xml  RecursiveDelayOp.h  Resource.rc  SelectionRect.cpp  SelectionRect.h  TestApp.cpp  TestApp.h  UserSettings.h  ViewerApplication.cpp  ViewerApplication.h  ViewerApplicationCommands.cpp  ViewerApplicationImage.cpp  ViewerApplicationInput.cpp  ViewerApplicationView.cpp  ViewerRenderPort.h  VirtualStatusBar.h  common.cmake  gitHead.cmd  (+3 more)
Clients/OIViewer/FileMangement/: FileList.cpp  FileList.h  FileSorter.h  FileWatcher.h  IFileListProvider.h
Clients/OIViewer/FileSystem/: FileCache.cpp  FileCache.h
Clients/OIViewer/Helpers/: ClipboardSetup.h  MessageFormatter.cpp  MessageFormatter.h  MessageHelper.cpp  MessageHelper.h  OIVHelper.h  OIVImageHelper.cpp  OIVImageHelper.h  PixelHelper.cpp  PixelHelper.h  ShellCommandHandler.cpp  ShellIntegrationHelper.h  UnitsHelper.h
Clients/OIViewer/Keyboard/: KeyBindings.h  KeyCodeHelper.h  KeyCombination.cpp  KeyCombination.h
Clients/OIViewer/OIVImage/: OIVBaseImage.cpp  OIVBaseImage.h  OIVFileImage.cpp  OIVRawImage.cpp  OIVTextImage.cpp  OIVTextImage.h
Clients/OIViewer/Source/: Main.cpp
Clients/OIViewer/UI/: MessageManager.cpp  MessageManager.h
Clients/OIViewer/win32/: BitmapHelper.h  DragAndDrop.cpp  HighPrecisionTimer.h  ImageControl.h  ImageLIst.h  MainWindow.cpp  MainWindow.h  MonitorInfo.cpp  MonitorInfo.h  NotificationIconGroup.cpp  NotificationIconGroup.h  Timer.cpp  UserMessages.h  Win32Helper.h  Win32Window.cpp  Win32Window.h  WindowPosHelper.h
ImageCodec/Codecs/CodecFreeImage/: CMakeLists.txt  CodecFreeImage.vcxproj  CodecFreeImage.vcxproj.filters
ImageCodec/ImageLoader/: CMakeLists.txt  ImageLoader.vcxproj  ImageLoader.vcxproj.filters
ImageCodec/ImageLoader/Include/: IImagePlugin.h  ImageLoader.h
ImageCodec/ImageLoader/Source/: BuildConfig.h  EmbeddedPluginInstaller.cpp  EmbeddedPluginInstaller.h  Image.cpp  ImageLoader.cpp  ImageProperties.cpp  ImageType.cpp
OIVAppCore/: CMakeLists.txt
OIVAppCore/Source/Src/: AppSettingsPolicy.cpp  BrowseSessionController.cpp  ColorCorrectionCommandPolicy.cpp  ColorCountPolicy.cpp  FileChangePolicy.cpp  FileList.cpp  FileReloadPolicy.cpp  FileRemovalPolicy.cpp  FileSessionController.cpp  FolderFileList.cpp  FrameLimiterPolicy.cpp  ImageEditPolicy.cpp  ImageFormatCatalogPolicy.cpp  ImageInfoPresentationPolicy.cpp  ImageLoadController.cpp  ImageLoadPresentationPolicy.cpp  ImageOpenController.cpp  ImageState.cpp  ImageTransformCommandPolicy.cpp  InputGesturePolicy.cpp  OIVImageHelper.cpp  SelectionRect.cpp  SelectionWorkflowPolicy.cpp  SequencerPolicy.cpp  SlideshowPolicy.cpp  SortCommandPolicy.cpp  SubImagePolicy.cpp  ViewActionController.cpp  ViewCommandPolicy.cpp  ViewerPresentationPolicy.cpp
OIVLib/: CMakeLists.txt
OIVLib/OIV/: CMakeLists.txt
OIVLib/OIV/Include/: Defs.h  Functions.h
OIVLib/OIV/Source/: APIImpl.cpp  APIImpl.h  ApiGlobal.cpp  Configuration.h  FreeTypeHelper.h  Functions.cpp  IPictureRenderer.h  ImageManager.h  OIV.cpp  OIV.h  Resampler.cpp
OIVLib/Renderers/: CMakeLists.txt
OIVLib/Renderers/OIVGLRenderer/: GLContext.cpp  GLContext.h  OIVGLRenderer.cpp  OIVGLRenderer.h  OIVGLRendererFactory.h
OIVShared/: CMakeLists.txt
OIVShared/Source/Src/: ImageResidency.cpp  (+3 more)
Tests/: CMakeLists.txt
Tests/OivTestDotNet/: OivTestDotNet.csproj  Program.cs
Tests/Source/: ImageMagickCorpus.json  ImageMagickTestCorpus.cpp  ImageMagickTestCorpus.h  TestAppCoreExtraction.cpp  TestBrowseSessionControllerImageCompatibility.cpp  TestFileSessionControllerImageCompatibility.cpp  TestImageCompatibility.cpp  TestResidency.cpp
oiv/: APIImpl.cpp  APIImpl.h  ApiGlobal.cpp  CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.h  Configuration.h  ConsoleLogListener.h  CopyDlls.cmd  CopyResources.cmd  FullScreenState.h  ImageAbstract.cpp  ImageAbstract.h  ImageDescriptor.h  ImageFreeImage.h  ImageLoader.h  ImageManager.cpp  ImageManager.h  ImagePlugin.h  ImageProperties.cpp  ImageProperties.h  Logger.h  NullRenderer.h  OgreHelper.h  PluginFreeImage.h  PluginJpeg.h  PluginPng.h  PreCompiled.h  StringUtil.h  StringUtility.h  TestApp.cpp  TestApp.h  Utility.cpp  Utility.h  Vector2.cpp  Vector2.h  ViewParameters.h  ZoomScrollState.cpp  ZoomScrollState.h  globals.props  (+10 more)
oiv/API/: StringHelper.h  Version.h  defs.h  functions.cpp  functions.h  platform.h
oiv/Commands/: CommandHandler.h  CommandProcessor.cpp  CommandProcessor.h
oiv/Common/: linux.h
oiv/FreeType/: CodePoint.h  FreeTypeConnector.cpp  FreeTypeConnector.h  FreeTypeFont.h  FreeTypeHeaders.h  FreeTypeHelper.h  FreeTypeRenderer.h  MetaTextParser.cpp  MetaTextParser.h
oiv/Image/: AxisAlignedTransform.h  Image.cpp  Image.h  ImageLoader.h  ImageProperties.cpp  ImageProperties.h  ImageType.h  ImageUtil.cpp  ImageUtil.h  PixelUtil.h
oiv/Include/: Int24.h
oiv/Interfaces/: IImagePlugin.h  IPictureRenderer.h  IRenderer.h  IRendererDefs.h
oiv/Plugins/: PluginFreeImage.h  PluginJpeg.h  PluginPng.h
oiv/Source/: ApiGlobal.h  CopyResources.cmd  IPictureRenderer.h  ImageManager.cpp
oiv/win32/: DragAndDrop.cpp  DragAndDrop.h  Event.h  MonitorInfo.cpp  MonitorInfo.h  Win32Window.cpp  Win32Window.h
oivappcore/: CMakeLists.txt
oivlib/: CMakeLists.txt
oivlib/oiv/: CMakeLists.txt
oivlib/renderers/: CMakeLists.txt
oivshared/: CMakeLists.txt
tests/: CMakeLists.txt
tests/source/: test_appcore_extraction.cpp  test_residency.cpp
(+641 files in other folders)
